Create component test for getTicketsByUserId method in TicketServiceAdapter.